--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,52 @@
 version: '3.2'
 
 services:
-  proxy:
-    image: nginx:1.11 # this will use the latest version of 1.11.x
-    ports:
-      - '80:80' # expose 80 on host and sent to 80 in container
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
   web:
     build: 
       context: .
       dockerfile: Dockerfile
-    image: geropellicer/httpd 
+    image: geropellicer/gunicorn 
+    volumes: 
+      - ./htdocs:/site
+#      - ./htdocs/assets:/site/static
+#      - media:/site/media
+    depends_on:
+      - postgres
+    expose: 
+        - "8080"
+    command: bash -c "python manage.py collectstatic --no-input && python manage.py makemigrations && python manage.py migrate && gunicorn --workers=3 ProyectoFinal.wsgi -b 0.0.0.0:8080"
+
+  nginx:
+    restart: always
+    build: ./nginx/
+    volumes: 
+      - ./nginx/:/etc/nginx/conf.d
+      - ./htdocs/logs/:/site/logs
+      - ./htdocs/static/:/site/static
+      - ./htdocs/media:/site/media
+    ports: 
+      - "1221:80"
+    links:
+      - web
+    depends_on:
+      - web
+
+      
+  postgres:
+    build: ./postgres
+    restart: unless-stopped
+    expose:
+      - "5432"
+    environment:   # will be used by the init script
+          LC_ALL: C.UTF-8
+          POSTGRES_USER: myuser
+          POSTGRES_PASSWORD: mypassowrd.
+          POSTGRES_DB: mydb
     volumes:
-      - type: bind
-        source: ./htdocs
-        target: /usr/local/apache2/htdocs/
+        - pgdata:/var/lib/postgresql/data/
+
+volumes: 
+  pgdata:
+  media:
+  static:
 
