--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,9 +6,15 @@ server {
 
 
     listen 80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name localhost;
     charset utf-8;
-    server_name  127.0.0.1;
 
+    ssl_certificate /etc/ssl/certs/localhost.crt;
+    ssl_certificate_key /etc/ssl/private/localhost.key;
+        
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
     client_max_body_size 4G;
     access_log /site/logs/nginx-access.log;
